fixed alignment bug in header for responsive mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,6 +336,7 @@ table td {
     #logo {
     font-size: 12px;
     font-weight: 600;
+    margin-right: 20px;
     }
    
     .dropdown-menu {
